# QYL-chatgpt-on-wechat

./: Dockerfile  app.py  config-template.json  config.py  pyproject.toml
bot/: bot_factory.py
bot/linkai/: link_ai_bot.py
bot/racio/: racio_bot.py
bridge/: bridge.py  reply.py
channel/: chat_channel.py
channel/wechat/: wechat_channel.py  wechat_message.py
common/: const.py
docker/: Dockerfile.1.5.4  docker-compose-certificate-craze.yml  docker-compose-family-education.yml  docker-compose-racio-camp.yml  docker-compose.yml  fetch.itchat.sh  putback.itchat.sh
docker/volumes/app/storage/data.family_education_07/: plugins.json
docker/volumes/app/storage/data.py_rally/: itchat.pkl
docker/volumes/app/storage/data.template/: plugins.json
lib/itchat/async_components/: login.py
lib/itchat/components/: login.py
plugins/godcmd/: godcmd.py
plugins/tool/: tool.py
