[tool.black]
line-length = 176
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '.+/(dist|.venv|venv|build|lib)/.+'

[tool.isort]
profile = "black"
[tool.poetry]
name = "chatgpt-on-wechat"
version = "0.1.0"
description = ""
authors = ["Al"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
HTMLParser = "^0.0.2"
PyQRCode = "^1.2.1"
qrcode = "^7.4.2"
requests = "^2.28.2"
chardet = "^5.1.0"
Pillow = "^10.1.0"
pre-commit = "^3.5.0"
"web.py" = "^0.62"
dulwich = "^0.21.6"
wechaty = "^0.10.7"
wechaty_puppet = "^0.4.23"
wechatpy = "^1.8.18"


websocket-client = "1.2.0"
curl-cffi = "^0.5.9"
tiktoken = "^0.3.2"
langid = "^1.1.6"
numpy = "1.24.2"
azure-cognitiveservices-speech = "^1.32.1"
baidu_aip = "^4.16.10"
pyttsx3 = "^2.90"
gTTS = "^2.3.1"
SpeechRecognition = "^3.10.0"

pydub = "^0.25.1"

#chatgpt-tool-hub = "0.4.6"
#pysilk_mod = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
